- Added decorators for the pancake types - Added enums for the ingredients and OrderStatus - Splitted the Services according to responsabilities - Concurrency fixes - Added more UTs